# UltraReader

./: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml
configs/: default.yaml
src/ultra_reader/: __init__.py  cli.py  main.py
src/ultra_reader/core/: __init__.py  config.py  exceptions.py  logger.py  types.py
src/ultra_reader/llm/: __init__.py  base.py  minimax.py  ollama.py
src/ultra_reader/pipeline/: __init__.py  reader.py  runner.py
src/ultra_reader/prompts/: __init__.py  extraction.py  qa.py  summary.py  wiki.py
src/ultra_reader/qa/: __init__.py  asker.py
src/ultra_reader/writers/: __init__.py  base.py  json.py  wiki.py  yaml.py
tests/: test_epub_reader.py  test_integration.py  test_minimax_api.py
